--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 secrets.json
+.temp
 
 # Created by https://www.toptal.com/developers/gitignore/api/windows,linux,vscode,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,linux,vscode,python
